--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <a href="四川食材影响因素的分析研究.pptx">PPT</a>
+    <a href="MapInfo17.zip">安装包</a>
+    <a href="2022-10-24_003903.png">安装教程</a>
 </body>
 </html>
